scrollbar fix

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -262,17 +262,33 @@ body {
 .f-list-item:last-of-type {
   margin-right: 0;
 }
-::-webkit-scrollbar {
-  width: 9px;
+.game-list::-webkit-scrollbar {
+  width: 12px;
 }
 
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rbga(0,0,0,0.2);
-}
-
-::-webkit-scrollbar-thumb {
+.game-list::-webkit-scrollbar-track {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rbga(0,0,0,0.5);
+  color: white;
+}
+.game-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  color: #6441a4;
+  border: 1px solid white;
+}
+.clip-list::-webkit-scrollbar {
+  height: 12px;
+  background-color: #6441a4;
+}
+
+.clip-list::-webkit-scrollbar-track {
+  border-radius: 10px;
+  color: mediumpurple;
+}
+
+.clip-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  color: mediumpurple;
+  border: 1px solid white;
 }
 
 .f-list-item:hover {
